remove DrasylConfig from handler